@@ -3,6 +3,9 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.15
 
+	- The cupsEncodeOptions() function now maintains a table
+	  of known boolean and numeric options, and encodes all
+	  other options as strings.
 	- Now add a newline before the end-of-page code in the
 	  PostScript filter; this fixes a problem with files
 	  that don't end with a newline.
